catalytic_table_to_struct/example/src/non_compiling_code/no_param_but_question_mark.stderr
error: proc macro panicked
 --> src/non_compiling_code/no_param_but_question_mark.rs
  |
  |     query!("select * from test_table where b = ? and c = 2");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Parameterized column count is different than the amount of parameters
